still need to import magrittr pipe

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,9 @@ Imports:
     dplyr,
     tibble,
     forcats,
-    CATALYST
+    CATALYST,
+    ggplot2,
+    ggrepel,
+    ggpubr,
+    stringr,
+    rlang
